--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -13,7 +13,9 @@
     "@tailwindcss/vite": "^4.0.14",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^4.0.14"
+    "react-icons": "^5.5.0",
+    "tailwindcss": "^4.0.14",
+    "vite-project": "file:"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
